--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,29 @@
           <version>${spring.version}</version>
       </dependency>
       <dependency>
-      	<groupId>javax.servlet</groupId>
-      	<artifactId>javax.servlet-api</artifactId>
-      	<version>[3,)</version>
+          <groupId>javax.servlet</groupId>
+          <artifactId>javax.servlet-api</artifactId>
+          <version>[3,)</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-webmvc</artifactId>
+          <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-mapper-asl</artifactId>
+          <version>1.9.11</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.activemq</groupId>
+          <artifactId>activemq-core</artifactId>
+          <version>5.7.0</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-jms</artifactId>
+          <version>${spring.version}</version>
       </dependency>
   </dependencies>
 </project>
