--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
-          <source>1.7</source>
-          <target>1.7</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
         </configuration>
       </plugin>
       <plugin>
@@ -25,6 +25,7 @@
   </build>
   <properties>
       <spring.version>3.1.3.RELEASE</spring.version>
+      <java.version>1.7</java.version>
   </properties>
   <dependencies>
       <dependency>
